// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > model > postModel > 200 > ok 1`] = `
{
  "card": {
    "_id": "test",
  },
}
`;

exports[`routes > model > postModel > audit > expected call 1`] = `"recusandae"`;

exports[`routes > model > postModel > audit > expected call 2`] = `
{
  "_id": "test",
}
`;
